--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ h4 span:first-child {
           </strong>
           <div class="username">
             <div class="url">
-              <a href="twitter.com/kristemmerman">@kristemmerman</a>
+              <a href="http://twitter.com/kristemmerman">@kristemmerman</a>
             </div>
           </div>
         </div>
