--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ h4 span:first-child {
           </span>
         </h4>
         <div class="website pull-right">
-          <a href="www.artoos.be">www.artoos.be</a>
+          <a href="http://www.artoos.be">www.artoos.be</a>
         </div>
         <div class="position">
           front-end developer
@@ -427,6 +427,6 @@ h4 span:first-child {
   
 
   </div>
- 
+  
   </body>
 </html>
